# AxionEngine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CmakePresets.json  README.md  TODO.md  game_output.txt
src/axion_data/: Transform.hpp
src/axion_engine/: Axion.hpp
src/axion_engine/core/: Engine.cpp  Engine.hpp  EngineConfig.hpp  EngineContext.hpp
src/axion_engine/core/events/: Event.hpp  EventBus.hpp
src/axion_engine/core/interfaces/: IAssetProvider.hpp  IInputProvider.hpp  ISceneProvider.hpp  ITimeProvider.hpp
src/axion_engine/managers/analysis/: Analyzer.cpp  Analyzer.hpp
src/axion_engine/managers/assets/: AssetsManager.cpp  AssetsManager.hpp
src/axion_engine/managers/input/: InputManager.cpp  InputManager.hpp
src/axion_engine/managers/logger/: Logger.cpp  Logger.hpp
src/axion_engine/managers/physics/: PhysicsData.hpp  PhysicsManager.cpp  PhysicsManager.hpp
src/axion_engine/managers/render/: RenderManager.cpp  RenderManager.hpp
src/axion_engine/managers/scene/: SceneManager.cpp  SceneManager.hpp
src/axion_engine/managers/time/: TimeManager.cpp  TimeManager.hpp
src/axion_engine/platform/sdl_manager/: SDLManager.cpp  SDLManager.hpp
src/axion_engine/platform/window/: Window.cpp  Window.hpp  WindowConfig.hpp
src/axion_engine/runtime/classes/gameObject/: GameObject.cpp  GameObject.hpp
src/axion_engine/runtime/classes/scene/: Scene.cpp  Scene.hpp
src/axion_engine/runtime/components/: Component.cpp  Component.hpp
src/axion_engine/runtime/components/camera/: CameraComponent.cpp  CameraComponent.hpp
src/axion_engine/runtime/components/collider/: AABBColliderComponent.cpp  AABBColliderComponent.hpp  BaseColliderComponent.hpp  CircleColliderComponent.cpp  CircleColliderComponent.hpp  ColliderComponent.hpp  ColliderHelpers.hpp  OBBColliderComponent.cpp  OBBColliderComponent.hpp  SphereColliderComponent.hpp  SquareColliderComponent.hpp
src/axion_engine/runtime/components/renderer/: CircleRenderComponent.hpp  CircleRenderer.hpp  RenderComponent.hpp  SpriteRenderComponent.hpp  SquareRenderComponent.hpp  TextRenderComponent.hpp
src/axion_engine/runtime/components/rigid_body/: RigidBody.hpp
src/axion_engine/runtime/components/scriptable/: ScriptableComponent.hpp
src/axion_engine/runtime/components/transform/: TransformComponent.hpp
src/axion_engine/runtime/interfaces/: ICamera.hpp  ICollisionListener.hpp  IRenderable.hpp  IUpdateable.hpp
src/axion_engine/structure/: ContextAware.hpp
src/axion_math/: Vector.hpp
src/axion_utilities/path/: PathFInder.hpp  PathFinder.hpp
src/axion_utilities/terminal/: Terminal.cpp  Terminal.hpp
src/axion_utilities/vector_filter/: PtrVectorFilter.hpp
src/game/: Main.cpp
src/game/scenes/: MainMenuScene.cpp  MainMenuScene.hpp  PongScene.cpp  PongScene.hpp
src/game/scripts/: AIPaddle.hpp  Ball.hpp  PlayerPaddle.hpp  ScriptableTest.hpp
src/game_2/: Main.cpp
src/game_2/assets/: README.md
src/game_2/scenes/: Game2Scene.cpp  Game2Scene.hpp  TwinStickScene.cpp  TwinStickScene.hpp
src/game_2/scripts/: BackgroundScript.hpp  BulletScript.hpp  CameraFollowScript.hpp  GameUIScript.hpp  InfiniteBackgroundScript.hpp  PlayerScript.hpp  ReticleScript.hpp  ZombieScript.hpp
src/game_debug/: Main.cpp  game.json
src/game_debug/scenes/: MainMenuScene.cpp  MainMenuScene.hpp
src/game_debug/scripts/: ScriptableDeleteTest.hpp  ScriptableRotationTest.hpp  ScriptableTest.hpp
src/game_launcher/: Main.cpp
src/pong/: Main.cpp  game.json
src/pong/scenes/: PongScene.cpp  PongScene.hpp
src/pong/scripts/: PlayerPaddle.hpp
src/twin_stick_shooter/: Main.cpp  game.json
src/twin_stick_shooter/scenes/: TwinStickScene.cpp  TwinStickScene.hpp
src/twin_stick_shooter/scripts/: PlayerScript.hpp  ReticleScript.hpp
